@@ -18,9 +18,9 @@ class MoveAwayFromCollectionBoxes implements PActivityDelegate {
         this.containerNode = containerNode;
     }
 
-    @Override public void activityStarted( final PActivity activity ) { }
+    public void activityStarted( final PActivity activity ) { }
 
-    @Override public void activityStepped( final PActivity activity ) { }
+    public void activityStepped( final PActivity activity ) { }
 
-    @Override public void activityFinished( final PActivity activity ) { shapeSceneNode.moveContainerNodeAwayFromCollectionBoxes( containerNode ); }
+    public void activityFinished( final PActivity activity ) { shapeSceneNode.moveContainerNodeAwayFromCollectionBoxes( containerNode ); }
 }
